fixed margin on mobile project page

--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -116,10 +116,13 @@ h1 {
     .projects-div {
         width: 95%;
         padding: 10px;
+        padding-top: 0px;
+        margin-top: 15px;
     }
 
     .project-div {
         width: 100%;
+        padding: 15px;
     }
 
     .gh-link {
